--- a/test/candles_01.ipynb
+++ b/test/candles_01.ipynb
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "1.93.69\n",
-      "-12483\n"
+      "-12396\n"
      ]
     }
    ],
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1630425660000, 48772.2, 48801.4, 48714.6, 48735.5, 1009.0]\n"
+      "[1663813260000, 18527.7, 18527.7, 18518.7, 18519.6, 70.0]\n"
      ]
     }
    ],
@@ -66,7 +66,8 @@
     "# symbol = 'BTC/USDT'\n",
     "symbol = 'BTC/USDT:USDT-220930'\n",
     "# time.sleep (exchange.rateLimit / 1000) # time.sleep wants seconds\n",
-    "df_list = exchange.fetch_ohlcv (symbol, '1m', since=since)\n",
+    "# df_list = exchange.fetch_ohlcv (symbol, '1m', since=since)\n",
+    "df_list = exchange.fetch_ohlcv (symbol, '1m')\n",
     "\n",
     "# https://www.okx.com/api/v5/market/history-candles?instId=BTC-USDT&bar=1m&limit=100&\n",
     "# before=1630425600999.0&after=1630431600999.0\n",
