--- a/test/questdb_01.ipynb
+++ b/test/questdb_01.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,11 +58,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-31 16:01:00\n"
+     ]
+    }
+   ],
    "source": [
     "#questdb write with influxdb line protocol\n",
+    "from questdb.ingress import Sender, IngressError\n",
+    "import sys\n",
+    "import datetime\n",
+    "\n",
+    "table_name = 'candles_btc-usdt'\n",
+    "datas = [\n",
+    "    [1630425660000, 48772.2, 48801.4, 48714.6, 48735.5, 1009.0],\n",
+    "]\n",
+    "\n",
+    "try:\n",
+    "    with Sender(questdb_config['host'], questdb_config['influxdb_port']) as sender:\n",
+    "        # Record with provided designated timestamp (using the 'at' param)\n",
+    "        # Notice the designated timestamp is expected in Nanoseconds,\n",
+    "        # but timestamps in other columns are expected in Microseconds. \n",
+    "        # The API provides convenient functions\n",
+    "        for row in datas:\n",
+    "            \n",
+    "            ts = datetime.datetime.utcfromtimestamp(row[0]/1000);\n",
+    "            print(ts)\n",
+    "            sender.row(\n",
+    "                table_name,\n",
+    "                columns={\n",
+    "                    # 'timestamp': row[0]*1000,\n",
+    "                    # 'timestamp': ts,\n",
+    "                    'open':row[1],\n",
+    "                    'high':row[2],\n",
+    "                    'low':row[3],\n",
+    "                    'close':row[4],\n",
+    "                    'volume':row[5],\n",
+    "                },\n",
+    "            # at=datetime.datetime.utcnow())\n",
+    "                at=ts\n",
+    "            )\n",
+    "        #END for\n",
+    "\n",
+    "        # We recommend flushing periodically, for example every few seconds.\n",
+    "        # If you don't flush explicitly, the client will flush automatically\n",
+    "        # once the buffer is reaches 63KiB and just before the connection\n",
+    "        # is closed.\n",
+    "        sender.flush()\n",
+    "\n",
+    "except IngressError as e:\n",
+    "    sys.stderr.write(f'Got error: {e}\\n')\n",
+    "\n",
     "\n",
     "\n",
     "\n",
