--- a/test/questdb_01.ipynb
+++ b/test/questdb_01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -58,26 +58,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-31 16:01:00\n"
+      "2021-08-31T16:01:00.000000Z\n",
+      "2022-09-22T02:21:00.000000Z\n"
      ]
     }
    ],
    "source": [
     "#questdb write with influxdb line protocol\n",
-    "from questdb.ingress import Sender, IngressError\n",
+    "from questdb.ingress import Sender, IngressError,TimestampNanos\n",
     "import sys\n",
     "import datetime\n",
     "\n",
     "table_name = 'candles_btc-usdt'\n",
     "datas = [\n",
     "    [1630425660000, 48772.2, 48801.4, 48714.6, 48735.5, 1009.0],\n",
+    "    [1663813260000, 18527.7, 18527.7, 18518.7, 18519.6, 70.0],\n",
     "]\n",
     "\n",
     "try:\n",
@@ -89,7 +91,12 @@
     "        for row in datas:\n",
     "            \n",
     "            ts = datetime.datetime.utcfromtimestamp(row[0]/1000);\n",
-    "            print(ts)\n",
+    "            ts.replace(tzinfo=datetime.timezone.utc)\n",
+    "            # ts = datetime.datetime.utcnow()\n",
+    "            print(ts.strftime('%Y-%m-%dT%H:%M:%S.%fZ'))\n",
+    "            \n",
+    "            ts = TimestampNanos(row[0]*1000)\n",
+    "            \n",
     "            sender.row(\n",
     "                table_name,\n",
     "                columns={\n",
@@ -101,7 +108,7 @@
     "                    'close':row[4],\n",
     "                    'volume':row[5],\n",
     "                },\n",
-    "            # at=datetime.datetime.utcnow())\n",
+    "                # at=datetime.datetime.utcnow()\n",
     "                at=ts\n",
     "            )\n",
     "        #END for\n",
@@ -119,6 +126,15 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 关于UTC时间戳\n",
+    ">>> tt = datetime.utcfromtimestamp(1663813260000/1000)\n",
+    ">>> tt.strftime('%Y-%m-%dT%H:%M:%S.%fZ')"
    ]
   }
  ],
