--- a/test/csv_append_01.ipynb
+++ b/test/csv_append_01.ipynb
@@ -58,7 +58,8 @@
     "path = 'test.csv'\n",
     "is_file_exist = os.path.isfile(path)\n",
     "\n",
-    "with open(path,'a+') as f:\n",
+    "with open(path,'a+', newline='') as f:\n",
+    "    #newline 解决空行问题\n",
     "    csv_write = csv.writer(f)\n",
     "    \n",
     "    if is_file_exist==False:\n",
